<resources>
    <string name="app_name">Zinseszinsberechnung</string>

    <string name="textView_startkapital">Startkapital:</string>
    <string name="hint_startkapital">Betrag eingeben!</string>
    <string name="textView_zinssatz">Zinssatz:</string>
    <string name="hint_zinssatz">Prozentwert eingeben!</string>
    <string name="textView_laufzeit">Laufzeit in Jahren:</string>
    <string name="hint_laufzeit">Laufzeit eingeben!</string>
    <string name="textView_endetest">Das Kapital hat sich auf folgenden Wert erhöht:</string>
    <string name="button_weiter">Weiter</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_fourth">FourthActivity</string>
</resources>
