<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView_startkapital"
        android:id="@+id/textView_startkapital"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/hint_startkapital"
        android:id="@+id/editText_startkapital"
        android:layout_below="@+id/textView_startkapital"
        android:layout_alignEnd="@+id/textView_startkapital" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_weiter"
        android:id="@+id/button_startkapital"
        android:layout_below="@+id/editText_startkapital"
        android:layout_alignEnd="@+id/editText_startkapital"
        android:onClick="startNewActivity" />
</RelativeLayout>
